engines/ep/src/dcp/stream.cc
@@ -123,6 +123,8 @@ uint64_t Stream::getReadyQueueMemory() {
 
 void Stream::addStats(const AddStatFn& add_stat, const void* c) {
     try {
+        LockHolder lh(streamMutex);
+
         const int bsize = 1024;
         char buffer[bsize];
         checked_snprintf(
@@ -173,17 +175,12 @@ void Stream::addStats(const AddStatFn& add_stat, const void* c) {
                          vb_.get());
         add_casted_stat(buffer, itemsReady.load(), add_stat, c);
 
-        size_t readyQsize;
-        {
-            std::lock_guard<std::mutex> lh(streamMutex);
-            readyQsize = readyQ.size();
-        }
         checked_snprintf(buffer,
                          bsize,
                          "%s:stream_%d_readyQ_items",
                          name_.c_str(),
                          vb_.get());
-        add_casted_stat(buffer, readyQsize, add_stat, c);
+        add_casted_stat(buffer, readyQ.size(), add_stat, c);
     } catch (std::exception& error) {
         EP_LOG_WARN("Stream::addStats: Failed to build stats: {}",
                     error.what());
